client/styles/folders.module.css
.removeBtn,
.deleteFolder {
  font-size: 1rem;
  padding: 0.2rem 0.8rem;
  border-radius: 8px;
  background: var(--orange);
  color: var(--white);
  cursor: pointer;
  opacity: 0;
  transition: 0.2s;
  pointer-events: none;
  position: absolute;
}

.deleteFolder {
  right: 2rem;
}

.folderTop:hover .deleteFolder {
  opacity: 1;
  pointer-events: all;
}

.removeBtn {
  transform: translateY(0%);
  bottom: 0;
}

.folderPost:hover .removeBtn {
  opacity: 1;
  transform: translateY(50%);
  pointer-events: all;
}

.folderBody {
  gap: 1rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.folderPost {
  border: 1px solid var(--border);
  max-width: 450px;
  min-width: 200px;
  height: min-content;
  width: fit-content;
  border-radius: 6px;
  padding: 0.5rem 1rem;
  cursor: pointer;
  position: relative;
  padding-bottom: 1rem;
}

.folderPost > p:first-of-type {
  color: rgb(136, 136, 136);
  margin-top: 1rem;
}

.folderPost > p:not(:first-of-type) {
  color: var(--blue) !important;
}

.folderTop {
  width: 100%;
  height: 10vh;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  column-gap: 1.2rem;
  padding: 1rem;
  padding-left: 2rem;
  border-bottom: 1px solid var(--border);
}

.folderTop h1 {
  cursor: pointer;
}

.folderTop img {
  height: 100%;
}

.folderContainer {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 2rem;
  row-gap: 3rem;
}

.folder {
  width: 120px;
  height: 88px;
  background-image: url(/folder.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  cursor: pointer;
  transition: 0.2s;
}

.moreOptions {
  font-size: 2rem;
  position: absolute;
  left: 0px;
  transform: translateX(-90%);
  opacity: 0;
  transition: 0.2s;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding-right: 0.5rem;
  width: 20px;
  height: 20px;
}

.moreOptions > div {
  background: var(--white);
  font-size: 1rem;
  padding: 0.2rem 0.5rem;
  width: max-content;
  padding-right: 1.5rem;
  border-radius: 6px;
  border: 1px solid var(--border);
  transform: scale(0);
  pointer-events: none;
  transition: opacity 0.25s, transform 0.1s;
  transform-origin: top right;
  opacity: 0;
}

.moreOptions:hover > div {
  transform: scale(1);
  opacity: 1;
  pointer-events: all;
}

.moreOptions:hover {
  width: max-content;
  height: 100px;
}

.folder:hover .moreOptions {
  transform: translateX(calc(-100%));
  opacity: 1;
}

.folder::after {
  content: attr(data-label);
  position: absolute;
  bottom: -10px;
  left: 50%;
  transform: translate(-50%, 100%);
  width: fit-content;
  transition: 0.2s;
}

.folder:hover::after {
  transform: translate(-50%, 60%);
}

.folder:hover {
  transform: translateY(5%);
}

.create {
  font-size: 1.2rem;
  background: var(--orange);
  color: var(--white);
  padding: 0.2rem 0.8rem;
  border-radius: 6px;
  cursor: pointer;
  width: fit-content;
  align-self: center;
  margin-bottom: 1rem;
}

.info {
  width: 100%;
  text-align: center;
}

.folderBody {
  padding: 1rem;
}

.folderViewContainer {
  padding-top: 0 !important;
}

.container,
.folderViewContainer {
  position: relative;
  top: 10vh;
  padding: 1rem;
  display: flex;
  flex-direction: column;
}

.container[data-collapsed="true"],
.folderViewContainer[data-collapsed="true"] {
  width: calc(100vw - (200px - (200px * 0.91)));
}

.container[data-collapsed="false"],
.folderViewContainer[data-collapsed="false"] {
  width: 50vw;
}

@media (min-width: 400px) {
  .container[data-collapsed="false"],
  .folderViewContainer[data-collapsed="false"] {
    width: calc(100vw - 200px);
  }
}

@media (max-width: 550px) {
  .folderTop:hover .deleteFolder {
    left: 50%;
    transform: translateX(-50%);
    outline: var(--white);
    outline-style: solid;
    outline-width: 12px;
  }
}

